--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "axios": "^0.18.0",
-    "materialize-css": "^0.100.2",
-    "react-materialize": "^1.1.2",
-    "react-router-dom": "^4.3.1",
-    "react-router-transition": "^1.2.1",
-    "gh-pages": "^1.2.0",
-    "jquery": "^3.3.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-brands-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
-    "@fortawesome/react-fontawesome": "^0.1.3"
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "@material-ui/core": "^3.9.0",
+    "axios": "^0.18.0",
+    "gh-pages": "^1.2.0",
+    "jquery": "^3.3.1",
+    "materialize-css": "^0.100.2",
+    "react-materialize": "^1.1.2",
+    "react-router-dom": "^4.3.1",
+    "react-router-transition": "^1.2.1"
   }
 }
