--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laura-ecommerce-frontend",
-  "homepage": "https://lacreations.co",
+  "homepage": "http://lacreations.co",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
